2018-04-04  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest):
	Don't store a continuation state for exit syscall.

2018-04-04  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::GdbServerImpl):
	Initialise mSyscallContinuation.
	(GdbServerImpl::rspServer): Reset mSyscallContinuation after each
	new connection.
	(GdbServerImpl::rspSyscallRequest): Take parameter, update
	mSyscallContinuation.
	(GdbServerImpl::rspSyscallReply): Hangle mSyscallContinuation,
	don't return a bool.
	(GdbServerImpl::rspContinue): Pass parameter to rspSyscallRequest.
	(GdbServerImpl::rspSingleStep): Call rspSyscallRequest to handle
	syscalls.
	(GdbServerImpl::rspClientRequest): Return after processing syscall
	reply.
	* server/GdbServerImpl.h (GdbServerImpl::lastPacketType): Delete.
	(GdbServerImpl::SyscallContinuationType): New enum type.
	(GdbServerImpl::mSyscallContinuation): New member variable.
	(GdbServerImpl::rspSyscallRequest): Update parameter list.
	(GdbServerImpl::rspSyscallReply): Update return type.

2018-04-01  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::doOneStep): Use ECALL
	for syscalls, and correctly spot C.EBREAK or EBREAK for breakpoints.
	(GdbSimImpl::stoppedAtSyscall): Delete definition.
	* targets/gdbsim/GdbSimImpl.h (GdbSimImpl::stoppedAtSyscall):
	Delete declaration.

2018-04-01  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspReadReg): Return an
	error when accessing an invalid register.

2018-03-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::doOneStep): Detect
	compressed break instructions as well as uncompressed.

2018-03-15  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::GdbSimImpl):
	Initialise new member variables.  Call reset to do work.